Allow notes to be added to a test run

--- a/model_configs.json
+++ b/model_configs.json
@@ -16,6 +16,11 @@
       "model_param": "Flywheel",
       "data_property_name": "f_wheel",
       "source": "Live Data"
+    },
+    {
+      "model_param": "Ambient",
+      "data_property_name": "22",
+      "source": "Constant"
     }
   ]
 }
