fixed look of upload and download config on all pages

--- a/app_config.json
+++ b/app_config.json
@@ -1,4 +1,4 @@
 {
     "cabinet_sensors_page_name": "Test Chamber Settings",
-    "test_chamber_page_name": "Test Chamber x"
+    "test_chamber_page_name": "Test Chamber Config"
 }
