--- a/app_config.json
+++ b/app_config.json
@@ -1,6 +1,6 @@
 {
     "cabinet_sensors_page_name": "Test Chamber Settings",
-    "test_chamber_page_name": "Test Chamber Setup",
+    "test_chamber_page_name": "Test Chamber Config",
     "test_config_page_name": "Test Configuration",
     "cabinet_connection_label": "Cabinet Probes",
     "device_sensor_label": "Device Port"
